samples/_failures_safe/1761500568_90f827_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e54ff926.c: In function ‘main’:
./samples/SAFE/__tmp_e54ff926.c:171:9: error: expected declaration or statement at end of input
  171 |         printf("Empty input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_e54ff926.c:171:9: error: expected declaration or statement at end of input
